visual fix: horizontal scrolling code input

--- a/packages/testing/showcase/src/app/query-page/query-page.component.scss
+++ b/packages/testing/showcase/src/app/query-page/query-page.component.scss
@@ -35,6 +35,7 @@ h1 {
   dort-code-input {
     flex-basis: 100%;
     margin-right: 10px;
+    min-width: 0;
   }
 
   .actions {
